# math

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  goldbachConjecture.cpp  main.cpp
src/goldbach/: goldbach.cpp  goldbach.hpp
src/linlang/: matrix.cpp  matrix.hpp
src/utils/: prime_utils.cpp  prime_utils.hpp
tests/: CMakeLists.txt
tests/goldbach/: goldbach_test.cpp
